--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "type": "library",
     "description": "This is a little neat helper for the ZipArchive methods with handy functions",
     "keywords": ["laravel","ZIP","Archive"],
-    "homepage": "http://github.com/Seldaek/monolog",
+    "homepage": "http://github.com/Chumper/zipper",
     "license": "Apache2",
     "authors": [
         {
