--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,21 @@
 language: php
 
+sudo: false
+
 php:
   - 5.4
   - 5.5
+  - 5.6
+  - 7
+
+env:
+  - COMPOSER_FLAGS=--prefer-lowest
 
 before_script:
-  - curl -s http://getcomposer.org/installer | php
-  - php composer.phar install --dev
+  - travis_retry composer self-update
+  - travis_retry composer update --no-interaction --prefer-source --prefer-stable ${COMPOSER_FLAGS}
+
+install:
+    - travis_retry composer update --no-interaction
 
 script: phpunit
