--- a/composer.json
+++ b/composer.json
@@ -20,12 +20,15 @@
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
-        "mockery/mockery": "dev-master"
+        "mockery/mockery": "^0.9"
     },
     "autoload": {
         "psr-0": {
             "Chumper\\Zipper": "src/"
         }
+    },
+    "config": {
+        "sort-packages": true
     },
     "minimum-stability": "dev"
 }
