--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,12 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0",
-        "illuminate/support": "5.x",
-        "illuminate/filesystem": "5.x"
+        "php": ">=5.6.0",
+        "illuminate/support": "^5.0",
+        "illuminate/filesystem": "^5.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "3.7.*",
+        "phpunit/phpunit": "^5.7",
         "mockery/mockery": "^0.9.4"
     },
     "autoload": {
@@ -30,5 +30,6 @@
     "config": {
         "sort-packages": true
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
