switch to psr-4 autoloader

--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,8 @@
         "mockery/mockery": "^0.9.4"
     },
     "autoload": {
-        "psr-0": {
-            "Chumper\\Zipper": "src/"
+        "psr-4": {
+            "Chumper\\Zipper\\": "src/Chumper/Zipper"
         }
     },
     "config": {
